--- a/master.css
+++ b/master.css
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 html {
 	font-family: arial;
 	font-size: 1rem;
@@ -26,13 +30,9 @@ h3 {
 	display: flex;
 }
 
-.container > div {
-	width: 50%;
-	padding 10px;
 
-}
-.container > div:first-child {
-	margin-right: 20px;
+.container > div {
+	flex: 1;
 }
 
 form {
@@ -40,27 +40,35 @@ form {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	align-self: flex-start;
-	max-width:  37.5rem;
-	width: 50%;
+	align-self: center;
+	flex-grow:.5;
+	margin: auto;
+
 }
 
 #submit {
-	width: 16rem;
+	width: 20rem;
 	font-size: 1.5rem;
 }
 
 input {
-	width: 16rem;
+	width: 20rem;
 	font-size: 1.5rem;
 	background-color: #839788; 
 	color:white;
-	border-color: white;
+	border-color: #3B413C;
 	font-family: 'Abril Fatface', cursive;;
 }
 
+input#submit {
+	border-style: none;
+	cursor: pointer;
+}
+
 #displayMsg {
-	
+	display:flex;
+	justify-content: center;
+	margin: 10px;
 }
 
 #zodiac_buttons {
@@ -69,7 +77,7 @@ input {
 	justify-content: center;
 	flex-flow: row wrap;
 	align-content: space-between;
-	width:  50%;
+	width:  100%;
 
 }
 
