--- a/master.css
+++ b/master.css
@@ -5,16 +5,20 @@
 html {
 	font-family: arial;
 	font-size: 1rem;
-	background-color: #132C3D;
+	background-color: #FE3A00;
 	color:white;
+}
+
+#fname, #lname, #bDay, #submit {
+	padding: 5px;
 }
 
 h1 {
 	display: flex;
 	justify-content: center;
-	font-size: 2.5rem;
+	font-size: 3rem;
 	color: white;
-	font-family: 'Abril Fatface', cursive;
+	font-family: 'Bangers', cursive;
 	letter-spacing: 2px;
 }
 
@@ -23,7 +27,7 @@ h3 {
 	justify-content: center;
 	font-size: 1rem;
 	color: white;
-	font-family: 'Abril Fatface', cursive;
+	font-family: 'Bangers', cursive;
 	letter-spacing: 2px;
 }
 .container {
@@ -54,23 +58,33 @@ form {
 input {
 	width: 20rem;
 	font-size: 1.5rem;
-	background-color: #839788; 
+	background-color: #FE3A00; 
 	color:white;
-	border-color: #3B413C;
-	font-family: 'Abril Fatface', cursive;;
+	border-color: #fff;
+	border-style: solid;
+	font-family: 'Bangers', cursive;;
 }
 
 input#submit {
 	border-style: none;
 	cursor: pointer;
+	background-color: #C5C8CE;
 }
 
 #displayMsg {
 	display:flex;
 	justify-content: center;
 	margin: 10px;
+	font-family: 'Bangers', cursive;
+	font-size: 1.5rem;
+
 }
 
+@media screen and (max-width:48.75rem) {
+#displayMsg {
+	font-size: 1.25rem;
+}
+}
 #zodiac_buttons {
 	display: flex;
 	align-items: center;
@@ -79,6 +93,19 @@ input#submit {
 	align-content: space-between;
 	width:  100%;
 
+}
+
+img {
+	width: 7rem;
+	height:7rem;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-flow: row wrap;
+	align-content: space-between;
+
+	width:  100%;
 }
 
 ::-webkit-input-placeholder {
@@ -90,10 +117,10 @@ button {
 	height: 7rem;
 	font-size: 1.25rem;
 	text-align: center;
-	background-color: #839788;
+	background-color: #C5C8CE;
 	border-style: none;
 	color: white;
-	font-family: 'Abril Fatface', cursive;
+	font-family: 'Bangers', cursive;
 	margin: .25rem;
 	cursor: pointer;
 
