--- a/master.css
+++ b/master.css
@@ -19,6 +19,15 @@ h1 {
 	font-size: 3rem;
 	color: white;
 	font-family: 'Bangers', cursive;
+	letter-spacing: 3px;
+}
+
+h2 {
+	display: flex;
+	justify-content: center;
+	font-size: 1.25rem;
+	color: white;
+	font-family: 'Bangers', cursive;
 	letter-spacing: 2px;
 }
 
@@ -77,6 +86,7 @@ input#submit {
 	margin: 10px;
 	font-family: 'Bangers', cursive;
 	font-size: 1.5rem;
+	letter-spacing: 2px;
 
 }
 
@@ -90,7 +100,7 @@ input#submit {
 	align-items: center;
 	justify-content: center;
 	flex-flow: row wrap;
-	align-content: space-between;
+	align-content: stretch;
 	width:  100%;
 
 }
@@ -98,14 +108,17 @@ input#submit {
 img {
 	width: 7rem;
 	height:7rem;
-
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-flow: row wrap;
 	align-content: space-between;
-
 	width:  100%;
+}
+
+img:hover {
+	width:7.5rem;
+	height:7.5rem;
 }
 
 ::-webkit-input-placeholder {
@@ -113,8 +126,8 @@ img {
 }
 
 button {
-	width: 7rem;
-	height: 7rem;
+	width: 8rem;
+	height: 8rem;
 	font-size: 1.25rem;
 	text-align: center;
 	background-color: #C5C8CE;
@@ -124,6 +137,8 @@ button {
 	margin: .25rem;
 	cursor: pointer;
 
+	display: flex;
+	justify-content: center;
 
 }
 
