--- a/master.css
+++ b/master.css
@@ -5,8 +5,8 @@
 html {
 	font-family: arial;
 	font-size: 1rem;
-	background-color: #FE3A00;
-	color:white;
+	background-color: #EEE870;
+	color:#333;
 }
 
 #fname, #lname, #bDay, #submit {
@@ -17,7 +17,7 @@ h1 {
 	display: flex;
 	justify-content: center;
 	font-size: 3.25rem;
-	color: white;
+	color: #333333;
 	font-family: 'Bangers', cursive;
 	letter-spacing: 3px;
 }
@@ -25,9 +25,9 @@ h1 {
 h2 {
 	display: flex;
 	justify-content: center;
-	font-size: 1rem;
-	color: white;
-	font-family: 'Bangers', cursive;
+	font-size: 1.13rem;
+	color: #333333;
+	font-family: 'Oswald', sans-serif;
 	letter-spacing: 2px;
 }
 
@@ -35,8 +35,8 @@ h3 {
 	display: flex;
 	justify-content: center;
 	font-size: 0.88rem;
-	color: white;
-	font-family: 'Arimo', sans-serif;
+	color: #333333;
+	font-family: 'Oswald', sans-serif;
 	letter-spacing: 2px;
 }
 .container {
@@ -67,9 +67,9 @@ form {
 input {
 	width: 20rem;
 	font-size: 1.5rem;
-	background-color: #FE3A00; 
-	color:white;
-	border-color: #fff;
+	background-color: #EEE870; 
+	color:#333;
+	border-color: #333;
 	border-style: solid;
 	font-family: 'Bangers', cursive;;
 }
@@ -77,17 +77,19 @@ input {
 input#submit {
 	border-style: none;
 	cursor: pointer;
-	background-color: #C5C8CE;
+	background-color: #333;
+    color: #eee870;
+    letter-spacing: 1px;
 }
 
 #displayMsg {
 	display:flex;
 	justify-content: center;
 	margin: 10px;
-	font-family: 'Arimo', sans-serif;
+	font-family: 'Oswald', sans-serif;
 	font-size: 1.5rem;
-	letter-spacing: 2px;
-	align-items:flex-start;
+	letter-spacing: 1px;
+	align-items:center;
 	flex-direction: column;
 
 }
@@ -109,8 +111,6 @@ input#submit {
 }
 
 img {
-	width: 7rem;
-	height:7rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -125,7 +125,7 @@ img {
 }*/
 
 ::-webkit-input-placeholder {
-	color: white;
+	color: #333;
 }
 
 button {
@@ -133,13 +133,14 @@ button {
 	height: 8rem;
 	font-size: 1.25rem;
 	text-align: center;
-	background-color: #C5C8CE;
+	background-color: #eee870;
 	border-style: none;
-	color: white;
+	color: #333;
 	font-family: 'Bangers', cursive;
 	margin: .25rem;
 	cursor: pointer;
-
+	border-style: solid;
+    border-color: #333;
 	display: flex;
 	justify-content: center;
 
@@ -156,14 +157,17 @@ button {
 
 #displayMess {
 	display: flex;
-	font-size: 1rem;
+	font-size: 1.25rem;
 	text-align: center;
 }
 
 hr {
-	border-top: 1px solid #fff;
+	border: 1px solid #333; 
 	display: flex;
-	max-width: 62.5rem;
+	max-width: 65rem;
 }
+
+#wrapper {
+	padding: 0 4rem 0 4rem;
 
 
