--- a/master.css
+++ b/master.css
@@ -129,20 +129,18 @@ img {
 }
 
 button {
-	width: 8rem;
-	height: 8rem;
 	font-size: 1.25rem;
 	text-align: center;
 	background-color: #eee870;
 	border-style: none;
 	color: #333;
-	font-family: 'Bangers', cursive;
-	margin: .25rem;
 	cursor: pointer;
 	border-style: solid;
     border-color: #333;
 	display: flex;
 	justify-content: center;
+	flex: 1 0 16.6%;
+    padding: 1rem;
 
 }
 
@@ -168,6 +166,20 @@ hr {
 }
 
 #wrapper {
-	padding: 0 4rem 0 4rem;
+	padding: 0 4rem 2rem 4rem;
+
+}
+
+ #display > :first-child {
+	padding-bottom: 1rem;
+}
+
+button {
+	transition: all .2s ease-in-out;
+}
+
+button:hover {
+	transform: scale(1.1); 
+}
 
 
