--- a/master.css
+++ b/master.css
@@ -62,6 +62,11 @@ form {
 #submit {
 	width: 20rem;
 	font-size: 1.5rem;
+	transition: all .2s ease-in-out;
+}
+
+#submit:hover {
+	transform: scale(1.05); 
 }
 
 input {
@@ -181,5 +186,6 @@ button {
 button:hover {
 	transform: scale(1.1); 
 }
+
 
 
